themes/inbeat/assets/scss/partials/_header.scss
/* ... */
#header {
  position: static;
  height: $mobilenavheight;
  padding-left: 0.5rem;
  padding-right: 1rem;
  margin: 0;

  @include breakpoint(sm) {
    height: $navheight;
    padding-left: 0;
    padding-right: 0;
    margin-left: -0.5rem;
    margin-right: -0.5rem;
  }

  .logo {
    display: block;
    width: 2.25rem;

    svg {
      z-index: 12;
      fill: $dark;
      position: relative;
      display: block;
    }
  }

  button {
    outline: none !important;
    z-index: 12;
    position: relative;
    display: block;
    margin-left: auto;
  }

  ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    background-color: transparent;

    &.right {
      margin-left: auto;
    }
  }

  li {
    float: left;
    margin-right: 1.2rem;

    @include breakpoint(md) {
      margin-right: 2rem;
    }

    cursor: pointer;

    a {
      transition: all 0.12s;
    }

    &.cta {
      display: flex;
      margin-right: 0px !important;

      a {
        padding: 12px 48px !important;
        background-color: black;
        opacity: 1;
      }

      .no-background {
        background: none;
        color: black;
        border: none;
      }

      line-height: 3rem;
    }

    a:not(.btn) {
      text-align: left;
      font-size: 1rem;
      line-height: 3rem;
      color: $dark;
      text-decoration: none;
    }

    &.mobile-adjusted {
      @include breakpoint(md-down) {
        position: inherit !important;

        .resources-navigation {
          padding-left: 21px;
        }
      }
    }

    &.has-submenu {
      position: relative;

      ul {
        visibility: hidden;
        opacity: 0;
        position: absolute;
        cursor: default;
        padding: 10px;
        z-index: 5;
        border-radius: 3px;

        &.grey-bg {
          li:hover {
            background: #f8f8f8;
          }
        }
      }

      li {
        opacity: 1;
        display: flex;
        align-items: center;
        padding: 10px 8px 12px;
        line-height: 0;
        border-radius: 5px;
        transition: all 0.05s ease;

        &:hover {
          background-color: #f2f2f2;
        }

        a {
          opacity: 1;
          display: flex;
          align-items: center;
          line-height: 0.6875rem;
          padding: 0 1.25rem;

          &.--no-flex {
            display: block;
            white-space: nowrap;
            padding: 0 8px;
          }

          h4 {
            font-size: 0.875rem;
            margin-bottom: -15px;
            margin-top: -5px;
            font-weight: 500;
          }

          .icons {
            margin-right: 1.5625rem;
          }

          p {
            font-size: 11px;
            font-weight: 350;
            color: #787878;
            margin: 0;
          }

          .new {
            position: relative;
            bottom: 5px;
            font-size: 11px;
            color: #1b16ff;
          }
        }
      }

      &:hover {
        ul {
          visibility: visible;
          opacity: 1;
          transform: translateY(6px);
        }
      }
    }
  }

  .creator-studio {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 8px;

    .new-badge {
      padding: 2px 6px;
      width: 33px;
      height: 15px;
      background: linear-gradient(180deg, #ffe9f0 0%, #faecdb 51.04%, #d6ebe4 100%);
      border-radius: 10px;
      flex: none;
      order: 1;
      flex-grow: 0;
      font-weight: 500;
      font-size: 9px;
      line-height: 15px;
      text-align: center;
      letter-spacing: 0.01em;
      color: #141514;
    }
  }

  .col-xs-7 li {
    line-height: 3.125rem;
  }
}
/* ... */

